Nginx/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        

        # Adding Resource Quotas for limitation of CPU and Memory Usage

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"


        # Attaching Volumes

        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: my-volume

      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: local-pvc
