Nginx/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80  # Outside World connect through this port
      targetPort: 80 # Inside the container port 
  type: ClusterIP
